Brain-BT/force-app/main/default/objects/Opportunity/fields/checkOpptyStage__c.field-meta.xml
<CustomField>
    <fullName>checkOpptyStage__c</fullName>
    <label>checkOpptyStage</label>
    <length>18</length>
    <type>Text</type>
</CustomField>