Brain-BT/force-app/main/default/objects/Opportunity/fields/Secondary_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Lead_Source__c</fullName>
    <label>Secondary Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Heiler Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>